--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ default = ["std"]
 std = ["hex/std", "winterfell/std"]
 
 [dependencies]
-winterfell = {git = "https://github.com/avecsi/winterfell", branch = "f23"}
+winterfell = {git = "https://github.com/avecsi/winterfell", branch = "f23-zk"}
 winter-utils = "0.13.1"
 winter-rand-utils = "0.13.1"
 hex = { version = "0.4.3", optional = true }
@@ -18,6 +18,7 @@ blake3 = { version = "1.8.2", default-features = false }
 env_logger = { version = "0.9", default-features = false }
 generic_singleton = "0.5.1"
 atomic_refcell = "0.1.9"
+rand_chacha = { version = "0.3", default-features = false }
 
 [patch.crates-io]
-winter-utils = { git = "https://github.com/AVecsi/winterfell", branch = "f23" }
+winter-utils = { git = "https://github.com/AVecsi/winterfell", branch = "f23-zk" }
